--- a/desarrollo web/index.html
+++ b/desarrollo web/index.html
@@ -44,7 +44,7 @@
 
         </header>
         <div class="imagen__principal">
-            <img data-aos="fade-down" class="imagen__principal__cabecera" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTGMEAQG8HoeRxU_Ok_GL0I0QM5XSJ0PjR_8g&usqp=CAU" alt="">
+            <img data-aos="fade-down" class="imagen__principal__cabecera" src="https://st2.depositphotos.com/2249091/8043/i/450/depositphotos_80439030-stock-photo-chiropractic-examining-patient.jpg" alt="osteopatia-lumbarrol">
         </div>
         <div class="servicios">
             <h1 id="h1home" data-aos="fade-down">NUESTROS SERVICIOS</h1>
@@ -108,7 +108,7 @@
             </div>
 
             <div data-aos="fade-down " class="imagen__principal ">
-                <img class="imagen__principal__cabecera " src="./imagenes/joven-recibiendo-masaje-espalda-centro-spa.webp " alt=" ">
+                <img class="imagen__principal__cabecera " src="./imagenes/joven-recibiendo-masaje-espalda-centro-spa.webp " alt="masaje de espalda ">
             </div>
 
             <div class="porque ">
@@ -163,8 +163,8 @@
                 <img src="https://tse4.mm.bing.net/th?id=OIP.mJMPC7BzwPoHjuzyeMG4WAHaHa&pid=Api&P=0&h=180 " alt=" ">Sixto Fernandez 614,Lomas de Zamora
             </div>
             <div class="pie__redes ">
-                <a href="https://www.instagram.com/ "><img src="https://tse4.mm.bing.net/th?id=OIP.tiAv_-lsGi0k1Q_7XwyZtQHaHa&pid=Api&P=0&h=180 " alt="logo instagram ">instagram </a>
-                <a href="https://twitter.com/ "><img src="https://tse3.mm.bing.net/th?id=OIP.AdzhkXtdEuGDv94QoKVmaAHaHa&pid=Api&P=0&h=180 " alt="logo twiter ">twiter</a>
+                <a href="https://www.instagram.com/ "><img src="https://tse4.mm.bing.net/th?id=OIP.tiAv_-lsGi0k1Q_7XwyZtQHaHa&pid=Api&P=0&h=180 " alt="logo instagram "></a>
+                <a href="https://twitter.com/ "><img src="https://tse3.mm.bing.net/th?id=OIP.AdzhkXtdEuGDv94QoKVmaAHaHa&pid=Api&P=0&h=180 " alt="logo twiter "></a>
             </div>
 
 
