--- a/desarrollo web/paginas/faqs.html
+++ b/desarrollo web/paginas/faqs.html
@@ -43,7 +43,7 @@
 
 
         </header>
-        <img data-aos="fade-down" class="imagen__principal__cabecera" src="../imagenes/bg-medicinainterna.png " alt="cambiar imagen " width=" ">
+        <img data-aos="fade-down" class="imagen__principal__cabecera" src="https://st4.depositphotos.com/20363444/26840/i/450/depositphotos_268407194-stock-photo-chiropractor-massaging-neck-man-lying.jpg" alt="cambiar imagen " width=" ">
 
         <h1 class="h1faqs" data-aos="fade-down">Que podemos tratar con la Osteopatia</h1>
         <section class="tratamientos ">
@@ -143,8 +143,8 @@
         </div>
 
         <div class="pie__redes ">
-            <a href="https://www.instagram.com/"><img src="https://tse4.mm.bing.net/th?id=OIP.tiAv_-lsGi0k1Q_7XwyZtQHaHa&pid=Api&P=0&h=180 " alt=" logo instagram">instagram </a>
-            <a href="https://twitter.com/"><img src="https://tse3.mm.bing.net/th?id=OIP.AdzhkXtdEuGDv94QoKVmaAHaHa&pid=Api&P=0&h=180 " alt="logo twiter">twiter</a>
+            <a href="https://www.instagram.com/"><img src="https://tse4.mm.bing.net/th?id=OIP.tiAv_-lsGi0k1Q_7XwyZtQHaHa&pid=Api&P=0&h=180 " alt=" logo instagram"> </a>
+            <a href="https://twitter.com/"><img src="https://tse3.mm.bing.net/th?id=OIP.AdzhkXtdEuGDv94QoKVmaAHaHa&pid=Api&P=0&h=180 " alt="logo twiter">/a>
         </div>
 
 
