--- a/desarrollo web/paginas/servicios.html
+++ b/desarrollo web/paginas/servicios.html
@@ -41,7 +41,7 @@
                     </div>
             </nav>
         </header>
-        <img data-aos="fade-down" class="imagen__principal__cabecera" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReOukvMnIfb6MStALMefov5fNAKNX5w-K_mA&usqp=CAU" alt="">
+        <img data-aos="fade-down" class="imagen__principal__cabecera" src="https://st4.depositphotos.com/20363444/26839/i/450/depositphotos_268398308-stock-photo-chiropractor-massaging-back-man-massage.jpg" alt="masaje facial">
         <h1 data-aos="fade-down">Nuestros Servicios</h1>
         <h3 data-aos="fade-right" class="servicios__subtitulo">Kinesiología y Rehabilitación</h3>
 
@@ -140,8 +140,8 @@
 
         </div>
         <div class="pie__redes ">
-            <a href="https://www.instagram.com/ "><img src="https://tse4.mm.bing.net/th?id=OIP.tiAv_-lsGi0k1Q_7XwyZtQHaHa&pid=Api&P=0&h=180 " alt="logo instagram ">instagram </a>
-            <a href="https://twitter.com/"><img src="https://tse3.mm.bing.net/th?id=OIP.AdzhkXtdEuGDv94QoKVmaAHaHa&pid=Api&P=0&h=180 " alt="logo twiter">twiter</a>
+            <a href="https://www.instagram.com/ "><img src="https://tse4.mm.bing.net/th?id=OIP.tiAv_-lsGi0k1Q_7XwyZtQHaHa&pid=Api&P=0&h=180 " alt="logo instagram "></a>
+            <a href="https://twitter.com/"><img src="https://tse3.mm.bing.net/th?id=OIP.AdzhkXtdEuGDv94QoKVmaAHaHa&pid=Api&P=0&h=180 " alt="logo twiter"></a>
         </div>
 
 
