--- a/desarrollo web/paginas/contacto.html
+++ b/desarrollo web/paginas/contacto.html
@@ -43,36 +43,49 @@
 
         </header>
         <div class="contenedor__imagen__contacto">
-            <img class="imagen__principal__cabecera" src="../imagenes/comprobacion-medica-piernas-centro-fisioterapia.webp" alt="movilización tobillo">
+            <img class="imagen__principal__cabecera" src="https://st4.depositphotos.com/20363444/26840/i/450/depositphotos_268408622-stock-photo-panoramic-shot-chiropractor-massaging-arm.jpg" alt="movilización-codo">
             <div class="texto__imagen__contacto">
                 <h2 class="animate__animated animate__backInDown"> Complete el formulario </h2>
-                <br>
                 <br>
                 <br>
                 <h2 class="animate__animated animate__backInDown"> y nos comunicaremos a la brevedad</h2>
             </div>
         </div>
-        <section data-aos="fade-down" class="formulario__contacto">
-            <div class="formContacto" class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label"></label>
-                <input type="NombreyApellido" class="form-control" id="exampleFormControlInput1" placeholder="Nombre y Apellido">
+        <div class="formulario">
+            <form>
                 <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label"></label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    <label for="exampleInputEmail1" class="form-label">Nombre</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text"></div>
                 </div>
                 <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Deje su consulta</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <label for="exampleInputEmail1" class="form-label">Apellido</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text"></div>
                 </div>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Correo electrónico</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico con nadie más.</div>
+                </div>
+                <div class="mb-3 form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label form-label" for="exampleCheck1">Acepto Terminos y Condiciones del servicio</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+            <div class="ubicacion">
+                <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3319.815210998793!2d-59.66886833310128!3d-33.68784871217792!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccad0645dcd43%3A0xfc05e39bbd61503f!2sClimatizacion%20SP%20(%20Speroni%20)!5e0!3m2!1ses-419!2sar!4v1686539544352!5m2!1ses-419!2sar"
+                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" "><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3319.815210998793!2d-59.66886833310128!3d-33.68784871217792!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccad0645dcd43%3A0xfc05e39bbd61503f!2sClimatizacion%20SP%20(%20Speroni%20)!5e0!3m2!1ses-419!2sar!4v1686539544352!5m2!1ses-419!2sar
+                    " width="400 " height="300 " style="border:0; " allowfullscreen=" " loading="lazy " referrerpolicy="no-referrer-when-downgrade "></iframe></a>
+                <p>
+                    <i class="bi bi-building "><span>Oficina Central</span></i>
+                    <br>
+                    <i class="bi bi-pin-map-fill "><span>Dirección: J.D.Peron 3445,CABA </span></i>
+                    <br>
+                    <i class="bi bi-telephone "><span> 11-5678-4565</span></i>
+                </p>
             </div>
-            <div class="pie__imagenes formulario__ubicaciones">
-
-                <img src="https://tse4.mm.bing.net/th?id=OIP.363HIF5ekaMqqYj0Tmd3MwHaHa&pid=Api&P=0&h=180 " alt="img teléfono ">11-6570-9512
-                <img src="https://tse4.mm.bing.net/th?id=OIP.mJMPC7BzwPoHjuzyeMG4WAHaHa&pid=Api&P=0&h=180 " alt="globo ubicación  ">Ñandubay 131,Ezeiza
-                <img src="https://tse4.mm.bing.net/th?id=OIP.mJMPC7BzwPoHjuzyeMG4WAHaHa&pid=Api&P=0&h=180 " alt="globo ubicación  ">Sixto Fernandez 614,Lomas de Zamora
-            </div>
-
-        </section>
 
     </main>
     <footer>
@@ -87,14 +100,14 @@
 
         </div>
         <div class="pie__redes ">
-            <a href="https://www.instagram.com/"><img src="https://tse4.mm.bing.net/th?id=OIP.tiAv_-lsGi0k1Q_7XwyZtQHaHa&pid=Api&P=0&h=180 " alt=" logo instagram">instagram </a>
-            <a href="https://twitter.com/"><img src="https://tse3.mm.bing.net/th?id=OIP.AdzhkXtdEuGDv94QoKVmaAHaHa&pid=Api&P=0&h=180 " alt="logo twiter">twiter</a>
+            <a href="https://www.instagram.com/ "><img src="https://tse4.mm.bing.net/th?id=OIP.tiAv_-lsGi0k1Q_7XwyZtQHaHa&pid=Api&P=0&h=180 " alt=" logo instagram "> </a>
+            <a href="https://twitter.com/ "><img src="https://tse3.mm.bing.net/th?id=OIP.AdzhkXtdEuGDv94QoKVmaAHaHa&pid=Api&P=0&h=180 " alt="logo twiter "></a>
         </div>
 
 
     </footer>
     <!--CDN BOOTSTRAP-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js " integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe " crossorigin="anonymous "></script>
     <!--CDN AOS CSS-->
     <script src="https://unpkg.com/aos@next/dist/aos.js "></script>
     <script>
